# ai-trading-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  trading_bot_v2.py  trading_dashboard_v2.html
tests/: test_algorithms.py  test_backtester.py  test_portfolio.py
trading_bot/: __init__.py  backtester.py  cli.py  config.py  data_fetcher.py  models.py  portfolio.py  strategy_engine.py
trading_bot/algorithms/: __init__.py  base.py  bollinger_bands.py  macd.py  moving_average.py  rsi.py
trading_bot/utils/: __init__.py
trading_bot/web/: __init__.py  app.py
trading_bot/web/templates/: backtest.html  base.html  dashboard.html  portfolio.html
